--- a/templates/ldap.conf.j2
+++ b/templates/ldap.conf.j2
@@ -5,8 +5,8 @@
 # See ldap.conf(5) for details
 # This file should be world readable but not world writable.
 
-{% if ldap_base is defined %}
-BASE	{{ ldap_base }}
+{% if ldap_basedn is defined %}
+BASE	{{ ldap_basedn }}
 {% else %}
 #BASE	dc=example,dc=com
 {% endif %}
