--- a/templates/modify-domain.ldif.j2
+++ b/templates/modify-domain.ldif.j2
@@ -1,13 +1,13 @@
 dn: olcDatabase={1}{{ slap_db_type }},cn=config
 changetype: modify
 replace: olcSuffix
-olcSuffix: {{ ldap_base }}
+olcSuffix: {{ ldap_basedn }}
 -
 replace: olcRootDN
-olcRootDN: {{ ldap_admin }},{{ ldap_base }}
+olcRootDN: {{ ldap_admin }},{{ ldap_basedn }}
 -
 replace: olcRootPW
 olcRootPW: {{ ldap_admin_hashed_passwd }}
 -
 replace: olcAccess
-olcAccess: {0}to * by dn="{{ ldap_admin }},{{ ldap_base }}" write by * read
+olcAccess: {0}to * by dn="{{ ldap_admin }},{{ ldap_basedn }}" write by * read
