--- a/templates/modify-domain.ldif.j2
+++ b/templates/modify-domain.ldif.j2
@@ -4,10 +4,10 @@ replace: olcSuffix
 olcSuffix: {{ ldap_basedn }}
 -
 replace: olcRootDN
-olcRootDN: {{ ldap_admin }},{{ ldap_basedn }}
+olcRootDN: {{ ldap_admin_dn }}
 -
 replace: olcRootPW
 olcRootPW: {{ ldap_admin_hashed_passwd }}
 -
 replace: olcAccess
-olcAccess: {0}to * by dn="{{ ldap_admin }},{{ ldap_basedn }}" write by * read
+olcAccess: {0}to * by dn="{{ ldap_admin_dn }}" write by * read
