Rename some variables.

--- a/templates/modify-domain.ldif.j2
+++ b/templates/modify-domain.ldif.j2
@@ -1,4 +1,4 @@
-dn: olcDatabase={1}{{ slap_db_type }},cn=config
+dn: olcDatabase={1}{{ slapd_db_type }},cn=config
 changetype: modify
 replace: olcSuffix
 olcSuffix: {{ ldap_basedn }}
